// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`watcher Fixture: watch-fixtures/basic 1`] = `
"Warming up...
Building...
Checking...
Computing graph...
Creating files...

 [entry]  index.js  5.33 kB   

√  Built!
Watching 8 files...
"
`;

exports[`watcher Fixture: watch-fixtures/custom-code-frame 1`] = `
"Warming up...
Building...
×  index.js[quase_builder_js_transformer]:1:14: Could not resolve ./a
Watching 11 files...
i  File working/a.js was added.
Warming up...
Building...
Checking...
×  index.js[quase_builder_js_transformer]:1:7: ./a exports nothing. Looking for default
Watching 11 files...
i  File working/a.js was changed.
Warming up...
Building...
Checking...
Computing graph...
Creating files...

 [entry]  index.js  5.43 kB   

√  Built!
Watching 11 files...
i  File working/a.js was removed.
Warming up...
Building...
×  index.js[quase_builder_js_transformer]:1:14: Could not resolve ./a
Watching 11 files...
"
`;

exports[`watcher Fixture: watch-fixtures/performance-hints 1`] = `
"Warming up...
Building...
Checking...
Computing graph...
Creating files...

          index.js      356 B   > 100 B [performance!] 
 [entry]  index.html  5.43 kB   > 10 B [performance!]  

√  Built!
Watching 14 files...
"
`;

exports[`watcher Fixture: watch-fixtures/resolve-recovery 1`] = `
"Warming up...
Building...
Checking...
Computing graph...
Creating files...

 [entry]  index.js  5.33 kB   

√  Built!
Watching 8 files...
i  File working/x.js was removed.
Warming up...
Building...
×  index.js[quase_builder_js_transformer]:1:14: Could not resolve ./x
Watching 11 files...
i  File working/x/index.js was changed.
Warming up...
Building...
Checking...
Computing graph...
Creating files...

 [entry]  index.js  5.35 kB   

√  Built!
Watching 11 files...
"
`;

exports[`watcher Fixture: watch-fixtures/script-inline-in-html 1`] = `
"Warming up...
Building...
×  index.html[quase_builder_html_transformer](0)[quase_builder_js_transformer]:2:24: Could not resolve ./a.js
Watching 11 files...
i  File working/a.js was added.
Warming up...
Building...
Checking...
×  index.html[quase_builder_html_transformer](0)[quase_builder_js_transformer]:2:15: ./a.js exports nothing. Looking for a
Watching 11 files...
i  File working/a.js was changed.
Warming up...
Building...
Checking...
Computing graph...
Creating files...

          index.js      450 B   
 [entry]  index.html  5.54 kB   

√  Built!
Watching 11 files...
"
`;

exports[`watcher Fixture: watch-fixtures/watches-missing-entry 1`] = `
"Warming up...
Building...
×  Could not find packages/builder/test/watch-fixtures/watches-missing-entry/working/index.js
Watching 1 files...
i  File working/index.js was added.
Warming up...
Building...
Checking...
Computing graph...
Creating files...

 [entry]  index.js  5.21 kB   

√  Built!
Watching 1 files...
"
`;

exports[`watcher Fixture: watch-fixtures/watches-missing-file 1`] = `
"Warming up...
Building...
×  index.js[quase_builder_js_transformer]:1:14: Could not resolve ./a
Watching 11 files...
i  File working/a.js was added.
Warming up...
Building...
Checking...
×  index.js[quase_builder_js_transformer]:1:7: ./a exports nothing. Looking for default
Watching 11 files...
i  File working/a.js was changed.
Warming up...
Building...
Checking...
Computing graph...
Creating files...

 [entry]  index.js  5.33 kB   

√  Built!
Watching 11 files...
i  File working/a.js was removed.
Warming up...
Building...
×  index.js[quase_builder_js_transformer]:1:14: Could not resolve ./a
Watching 11 files...
"
`;

exports[`watcher Fixture: watch-fixtures/watches-modules-in-cache 1`] = `
"Warming up...
Building...
Checking...
Computing graph...
Creating files...

 [entry]  index.js  5.33 kB   

√  Built!
Watching 8 files...
i  File working/index.js was changed.
Warming up...
Building...
×  index.js[quase_builder_js_transformer]:1:18: Could not resolve ./stuff
Watching 13 files...
i  File working/a.js was changed.
Warming up...
Building...
×  index.js[quase_builder_js_transformer]:1:18: Could not resolve ./stuff
Watching 13 files...
i  File working/index.js was changed.
Warming up...
Building...
Checking...
Computing graph...
Creating files...

 [entry]  index.js  5.33 kB   

√  Built!
Watching 13 files...
"
`;

exports[`watcher Fixture: watch-fixtures/watches-rename 1`] = `
"Warming up...
Building...
Checking...
Computing graph...
Creating files...

 [entry]  index.js  5.33 kB   

√  Built!
Watching 8 files...
i  File working/a.js was removed.
Warming up...
Building...
×  index.js[quase_builder_js_transformer]:1:14: Could not resolve ./a
Watching 11 files...
i  File working/index.js was changed.
Warming up...
Building...
Checking...
Computing graph...
Creating files...

 [entry]  index.js  5.33 kB   

√  Built!
Watching 13 files...
"
`;
